# RealTime_Pose_Estimation

./: .gitignore  CLAUDE.md  HWalker_FirstMeeting_2026-05-04.pptx
.context/: codex-session-id  codex-session-id.bak.1777864654
configs/: clinical_safe.yaml  walker_geometry.yaml
cpp/: CMakeLists.txt
cpp/include/hwalker/: cuda_preprocess.hpp  shm_v2_writer.hpp  trt_runner.hpp
cpp/src/: cuda_preprocess.cu  cuda_preprocess_binding.cpp  python_bindings.cpp  shm_v2_writer.cpp  trt_binding.cpp  trt_runner.cpp
docs/: jetson_test_guide.md  mac_validation_workflow.md  plan_d_explained.md
docs/cuda-stream/: consumer_contract.md
docs/experiments/: 2026-05-03-latency-debugging.md  2026-05-04-phase-a-results.md  2026-05-04-plan-v2.md  2026-05-05-plan-v6.md  2026-05-05-session-summary.md  2026-05-06-baseline-5runs.md  2026-05-06-checkpoint-zedlag-pivot.md  2026-05-06-full-diagnosis.md  2026-05-07-plan-v7-zedlag-tdd.md  2026-05-08-checkpoint-baseline-and-codex-r1.md  2026-05-08-jetson-measurement-runbook.md  2026-05-imu-vs-vision-mpu.md  measurements_log.md
docs/handovers/: 2026-05-12-jetson-tasks.md  2026-05-12-post-v4l2-abandon-roadmap.md
docs/hardware/: system-state.md  zed_x_mini_spec.md
docs/lessons/: codex_review_phase1_2026_05_12.md  comprehensive_review_2026_05_13.md  cpp_shm_v2_reader_skeleton.md  master_plan_2026_05.md  plan_d_phase1_review.md  plan_d_phase2_design.md  plan_d_predictor_spec.md  quality_dataset_format.md  rt_architecture_2026_05_12.md  session_errors_and_learnings.md  shm_v2_packet_spec.md  v4l2_bypass_plan.md  zed_rawbuffer_sparse_stereo_spec.md
docs/meetings/2026-05-04/: Meeting_260504.pptx  build_ppt.py  presentation.pptx
docs/paper/: paper_outline.md  vision-necessity.md
docs/review/: index.html  jetson_walking_step_by_step.html  plan_v5.html  sprint_0_5_audit.html  sprint_1_camera_speed_push.html
firmware/teensy_host_receiver/: README.md  can_driver.h  force_clamp.h  host_protocol.h  teensy_host_receiver.ino  watchdog.h
scripts/: analyze_invalid_bursts.py  analyze_run_log.py  analyze_sprint1_ablation.py  analyze_trace.py  analyze_track_comparison.py  analyze_walking_results.py  analyze_week3_debug.py  batch_pose_compute.py  bridge_only_bench.py  build_cpp.sh  cable_kinematics.py  check_cuda_context.py  check_jetson_environment.sh  check_jetson_state.sh  check_v4l2_capability.sh  compare_pose_outputs.py  compare_runs.py  debug_week3_depth_jump.sh  debug_week3_full.sh  diagnose_imports.py  diagnose_model_quality.py  dump_shm.py  jetson_full_batch.sh  jetson_full_test.sh  jetson_gamma_preflight.py  jetson_latency_profile.py  jetson_phase15_verify.sh  jetson_phase2_verify.sh  jetson_pipelined_vs_serial.py  jetson_runtime_tuning.py  jetson_smoke_test.py  kill_test_one_frame_late.py  measurement_cpu_affinity_ablation.sh  measurement_priority_ablation.sh  nsys_zedlag.sh  parse_zedlag_results.py  phase_a_sweep.sh  replay_walking_svo.sh  run_all_jetson_tests.sh  run_plan_d_async_test.sh  (+26 more)
src/perception/: camera_bridge.py
src/perception/CUDA_Stream/: cuda_graph.py  dump_quality_dataset.py  dump_shm_stream.py  dump_validation_frames.py  gpu_postprocess.py  gpu_preprocess.py  launch_clean.sh  pipeline.py  quality_dataset_io.py  run_stream_demo.py  shm_publisher.py  sparse_stereo_kernel.py  stream_manager.py  tracer.py  trt_runner.py  v4l2_capture.py  verify_world_frame.py  view_sagittal.py  vpi_pipeline.py  watchdog.py  zed_calib_load.py  zed_gpu_bridge.py
src/perception/benchmarks/: trt_pose_engine.py  zed_camera.py
src/perception/plan_d_prototype/: __init__.py  cascade.py  cycle_template.py  divergence.py  ekf_l1.py  ekf_l2.py  ekf_l3.py  hilbert_phase.py  phase_estimator.py  predictor.py  utils.py
src/perception/realtime/: calibration.py  depth_hold.py  forecast_publisher.py  joint_3d.py  pipeline_main.py  plan_d_feeder.py
tests/: benchmark_t3_t4_breakdown.py  conftest.py  profile_predict_stages.py  test_bridge_flow.py  test_cable_kinematics.py  test_cuda_preprocess.py  test_depth_hold.py  test_ekf_accuracy.py  test_phase_b_integration.py  test_plan_d_cascade.py  test_plan_d_cold_start_integration.py  test_plan_d_cycle_template.py  test_plan_d_divergence.py  test_plan_d_hilbert_phase.py  test_plan_d_l1.py  test_plan_d_l2.py  test_plan_d_l3.py  test_plan_d_packet_schema.py  test_plan_d_phase_estimator.py  test_plan_d_predictor.py  test_plan_d_utils.py  test_post_fusion.py  test_quality_dataset_io.py  test_shm_v2_writer_cpp.py  test_teensy_protocol.py  test_timestamp_monotonic.py  test_trt_pose_engine_cpp.py  test_trt_runner_cpp.py  test_world_up_integration.py
